# Smart-Spotify-Agent

./: README.md  pyproject.toml
src/: agent.py  auth.py
